# mongodb-data-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  test.json
.github/workflows/: compilation.yml
scripts/: deleteMany.sh  deleteOne.sh  dropDatabase.sh  findMany.sh  findOne.sh  insertMany.sh  insertOne.sh  updateMany.sh  updateOne.sh
src/: cli.rs  error.rs  log.rs  main.rs  server.rs
src/server/: aggregate.rs  delete_many.rs  delete_one.rs  drop_database.rs  find_many.rs  find_one.rs  insert_many.rs  insert_one.rs  normalize.rs  state.rs  update_many.rs  update_one.rs
