[package]
name = "mongodb-atlas-data-api"
description = "A local MongoDB Atlas Data API for testing"
license = "Apache-2.0"
version = "0.1.2"
repository = "https://github.com/grafbase/mongodb-data-api"
edition = "2021"
readme = "README.md"
keywords = ["mongodb"]

[[bin]]
name = "mongodb-atlas-data-api"

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["tracing"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
mongodb = { version = "2.6.0", features = ["tracing-unstable"] }
tokio = { version = "1.30.0", features = ["tokio-macros", "rt-multi-thread"] }
serde = { version = "1.0.183", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2"
serde_json = "1"
base64 = "0.21.2"
futures = "0.3.28"
