[package]
name = "mongodb-data-api"
description = "A local MongoDB Atlas Data API for testing"
license = "Apache-2.0"
version = "0.1.3"
repository = "https://github.com/grafbase/mongodb-data-api"
edition = "2021"
readme = "README.md"
keywords = ["mongodb"]

[[bin]]
name = "mongodb-data-api"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tracing"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
mongodb = { version = "2.7.0", features = ["tracing-unstable"] }
tokio = { version = "1.31.0", features = ["tokio-macros", "rt-multi-thread"] }
serde = { version = "1.0.183", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
base64 = "0.22.0"
futures = "0.3.28"
